refactor: 코드 간략화 및 Mapper 생성자 제한